--- a/index.html
+++ b/index.html
@@ -11,7 +11,21 @@
 <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <h1>hey</h1>
+  <form class="form-inline" name="foodform">
+    <div class="form-group">
+      <label for="exampleInputName2">Employee Id</label>
+      <input type="text" id="idInput" class="form-control" placeholder="Employee Id">
+    </div>
+    <div class="form-group">
+      <label for="exampleInputName2">Name</label>
+      <input type="text" id="nameInput" class="form-control" placeholder="jaun">
+    </div>
+    <div class="form-group">
+      <label for="exampleInputName2">Rate</label>
+      <input type="text" id="nameInput" class="form-control" placeholder="rate">
+    </div>
+    <button id="submitbutton" type="button" class="btn btn-default">Submit</button>
+  </form>
 <script src="js/scripts.js"></script>
 </body>
 
