--- a/index.html
+++ b/index.html
@@ -14,17 +14,23 @@
   <form class="form-inline" name="foodform">
     <div class="form-group">
       <label for="exampleInputName2">Employee Id</label>
-      <input type="text" id="idInput" class="form-control" placeholder="Employee Id">
+      <input type="text" id="idInput" class="form-control" placeholder="Employee Id" value="2">
     </div>
     <div class="form-group">
       <label for="exampleInputName2">Name</label>
-      <input type="text" id="nameInput" class="form-control" placeholder="jaun">
+      <input type="text" id="nameInput" class="form-control" placeholder="jaun" value="jaun">
     </div>
     <div class="form-group">
       <label for="exampleInputName2">Rate</label>
-      <input type="text" id="nameInput" class="form-control" placeholder="rate">
+      <input type="text" id="rateInput" class="form-control" placeholder="rate" value="56">
     </div>
+
     <button id="submitbutton" type="button" class="btn btn-default">Submit</button>
+    <div class="form-group">
+      <label for="exampleInputName2">piece</label>
+      <input type="text" id="pieceInput" class="form-control" placeholder="piece">
+    </div>
+    <button id="submitPieceWork" type="button" class="btn btn-default">ADD</button>
   </form>
 <script src="js/scripts.js"></script>
 </body>
