make content editable

--- a/add.html
+++ b/add.html
@@ -60,24 +60,25 @@
 
 
 
-  <div id="content-box" class="Rtable Rtable--7cols Rtable--collapse js-RtableAccordions">
+  <div id="content-box" class="Rtable Rtable--12cols Rtable--collapse js-RtableAccordions">
 
 
-
+ <tr>
     <button class="Accordion" role="tab" aria-selected="false">Albert</button>
-    <div class="Rtable-cell  Rtable-cell--head">
-      <h3>Albert Tores</h3></div>
-    <div class="Rtable-cell">id: 45</div>
-    <div class="Rtable-cell">id: 45</div>
-    <div class="Rtable-cell">id: 45</div>
-    <div class="Rtable-cell">id: 45</div>
-    <div class="Rtable-cell">id: 45</div>
-    <!-- <div class="Rtable-cell">id: 45</div>
-    <div class="Rtable-cell">id: 45</div>
-    <div class="Rtable-cell">id: 45</div>
-    <div class="Rtable-cell">id: 45</div>
-    <div class="Rtable-cell">id: 45</div> -->
-    <div class="Rtable-cell  Rtable-cell--foot"><strong>08/24: 5</strong></div>
+  <td>  <div class="Rtable-cell  Rtable-cell--head" contenteditable="true">
+      <h3>Id 34</h3></div> <td>
+  <td>  <div edit_type="click" col_name="fname" class="Rtable-cell row_data" contenteditable="true">Francisco </div> <td>
+  <td>  <div edit_type="click" col_name="fname" class="Rtable-cell row_data" contenteditable="true">day 1</div> <td>
+  <tr>  <div edit_type="click" col_name="fname" class="Rtable-cell row_data" contenteditable="true">Day: 2</div> <td>
+  <td>  <div edit_type="click" col_name="fname" class="Rtable-cell row_data" contenteditable="true">Day: 3</div> <td>
+  <td>  <div edit_type="click" col_name="fname" class="Rtable-cell row_data" contenteditable="true">Day: 4</div> <td>
+  <td>  <div edit_type="click" col_name="fname" class="Rtable-cell row_data" contenteditable="true">Day: 5</div> <td>
+  <td>  <div edit_type="click" col_name="fname" class="Rtable-cell row_data" contenteditable="true">Day: 6</div> <td>
+  <td>  <div edit_type="click" col_name="fname" class="Rtable-cell row_data" contenteditable="true">Day: 7</div> <td>
+  <td>  <div edit_type="click" col_name="fname" class="Rtable-cell row_data" contenteditable="true">Total</div> <td>
+  <td>  <div edit_type="click" col_name="fname" class="Rtable-cell row_data" contenteditable="true">Rate </div>  <td>
+    <div  class="row_data" edit_type="click" col_name="fname" class="Rtable-cell  Rtable-cell--foot" contenteditable="true"><strong>Net pay</strong></div>
+    <tr>
 
     <!-- <button class="Accordion" role="tab" aria-selected="false">Ryan</button>
     <div class="Rtable-cell  Rtable-cell--head">
