addeding some elements

--- a/add.html
+++ b/add.html
@@ -67,13 +67,15 @@
 
 
 
+
+
  <!-- <tr>
     <button class="Accordion" role="tab" aria-selected="false">Albert</button>
   <div class="Rtable-cell  Rtable-cell--head row_data" contenteditable="true">
       id 56</div>
   <td id ="bob" ><div edit_type="click" col_name="fname" class="Rtable-cell row_data" contenteditable="true">Francisco </div> </td>
   <td ><div edit_type="click" col_name="fname" class="Rtable-cell row_data" contenteditable="true">day 1</div> </td>
-  <tr><div edit_type="click" col_name="fname" class="Rtable-cell row_data" contenteditable="true">Day: 2</div> </td>
+  <td><div edit_type="click" col_name="fname" class="Rtable-cell row_data" contenteditable="true">Day: 2</div> </td>
   <td><div edit_type="click" col_name="fname" class="Rtable-cell row_data" contenteditable="true">Day: 3</div> </td>
   <td><div edit_type="click" col_name="fname" class="Rtable-cell row_data" contenteditable="true">Day: 4</div> </td>
   <td><div edit_type="click" col_name="fname" class="Rtable-cell row_data" contenteditable="true">Day: 5</div> </td>
