--- a/add.html
+++ b/add.html
@@ -51,7 +51,8 @@
   </form>
   <div class="form-group" id="addpiece">
     <label for="exampleInputName2">piece</label>
-    <input type="text" name ="date" id="pieceInput" class="form-control" placeholder="piece">
+    <input type="text" name ="piece" id="pieceInput" class="form-control" placeholder="piece">
+    <input type="text" name = date id= "dateInput" class="form-control"> 
     <button id="submitPieceWork" type="button" class="btn btn-default">ADD</button>
     <button id="newEmployee" type="button" class="btn btn-default">ADD NEW Employe</button>
 
