--- a/add.html
+++ b/add.html
@@ -43,51 +43,110 @@
       <label for="exampleInputName2">Name</label>
       <input type="text" id="nameInput" class="form-control" placeholder="jaun" value="jaun">
     </div>
+
     <div class="form-group">
       <label for="exampleInputName2">Rate</label>
       <input type="text" id="rateInput" class="form-control" placeholder="rate" value="2">
     </div>
     <button id="submitbutton" type="button" class="btn btn-default">Submit</button>
   </form>
+    <button id="submitPieceWorkTotal" type="button" class="btn btn-default">PieceWork</button>
+  <div class="row">
+      <div class="col-md-1">Id</div>
+      <div class="col-md-1">Name</div>
+      <div class="col-md-1">Sun</div>
+      <div class="col-md-1">Mon</div>
+      <div class="col-md-1">Tues</div>
+      <div class="col-md-1">Thurs</div>
+      <div class="col-md-1">Fri</div>
+      <div class="col-md-1">Sat</div>
+      <div class="col-md-1">Total</div>
+      <div class="col-md-1">Rate</div>
+      <div class="col-md-1">FICA</div>
+      <div class="col-md-1"></div>
+    </div>
+
+
+  </div>
   <div class="form-group" id="addpiece">
     <label for="exampleInputName2">piece</label>
     <input type="text" name ="piece" id="pieceInput" class="form-control" placeholder="piece">
-    <input type="text" name = date id= "dateInput" class="form-control"> 
+    <input type="text" name = date id= "dateInput" class="form-control">
     <button id="submitPieceWork" type="button" class="btn btn-default">ADD</button>
     <button id="newEmployee" type="button" class="btn btn-default">ADD NEW Employe</button>
 
 
   </div>
 
-  <button id="submitPieceWorkTotal" type="button" class="btn btn-default">PieceWork</button>
-
-
-
-  <div id="content-box" class="Rtable Rtable--12cols Rtable--collapse js-RtableAccordions">
 
 
 
 
 
 
- <!-- <tr>
-    <button class="Accordion" role="tab" aria-selected="false">Albert</button>
-  <div class="Rtable-cell  Rtable-cell--head row_data" contenteditable="true">
-      id 56</div>
-  <td id ="bob" ><div edit_type="click" col_name="fname" class="Rtable-cell row_data" contenteditable="true">Francisco </div> </td>
-  <td ><div edit_type="click" col_name="fname" class="Rtable-cell row_data" contenteditable="true">day 1</div> </td>
-  <td><div edit_type="click" col_name="fname" class="Rtable-cell row_data" contenteditable="true">Day: 2</div> </td>
-  <td><div edit_type="click" col_name="fname" class="Rtable-cell row_data" contenteditable="true">Day: 3</div> </td>
-  <td><div edit_type="click" col_name="fname" class="Rtable-cell row_data" contenteditable="true">Day: 4</div> </td>
-  <td><div edit_type="click" col_name="fname" class="Rtable-cell row_data" contenteditable="true">Day: 5</div> </td>
-  <td><div edit_type="click" col_name="fname" class="Rtable-cell row_data" contenteditable="true">Day: 6</div> </td>
-  <td><div edit_type="click" col_name="fname" class="Rtable-cell row_data" contenteditable="true">Day: 7</div> </td>
-  <td><div edit_type="click" col_name="fname" class="Rtable-cell row_data" contenteditable="true">Total</div> </td>
-  <td><div edit_type="click" col_name="fname" class="Rtable-cell row_data" contenteditable="true">Rate </div>  </td>
-  <td><div edit_type="click" col_name="fname" class="Rtable-cell  Rtable-cell--foot row_data" contenteditable="true"><strong>Net pay</strong></div> </td>
+
+
+  <div class=" js-RtableAccordions Rtable--collapse Rtable Rtable--12cols"  id= "content-box"  >
+
+    <!-- <tr>
+      <button class="Accordion" role="tab" aria-selected="false">Albert</button>
+    <td><div class="Rtable-cell  Rtable-cell--head row_data" contenteditable="true">
+        id 56</div><td>
+    <td id ="bob" ><div edit_type="click" col_name="fname" class="Rtable-cell row_data" contenteditable="true">Francisco </div> </td>
+    <td ><div edit_type="click" col_name="fname" class="Rtable-cell row_data" contenteditable="true">day 1</div> </td>
+    <td><div edit_type="click" col_name="fname" class="Rtable-cell row_data" contenteditable="true">Day: 2</div> </td>
+    <td><div edit_type="click" col_name="fname" class="Rtable-cell row_data" contenteditable="true">Day: 3</div> </td>
+    <td><div edit_type="click" col_name="fname" class="Rtable-cell row_data" contenteditable="true">Day: 4</div> </td>
+    <td><div edit_type="click" col_name="fname" class="Rtable-cell row_data" contenteditable="true">Day: 5</div> </td>
+    <td><div edit_type="click" col_name="fname" class="Rtable-cell row_data" contenteditable="true">Day: 6</div> </td>
+    <td><div edit_type="click" col_name="fname" class="Rtable-cell row_data" contenteditable="true">Day: 7</div> </td>
+    <td><div edit_type="click" col_name="fname" class="Rtable-cell row_data" contenteditable="true">Total</div> </td>
+    <td><div edit_type="click" col_name="fname" class="Rtable-cell row_data" contenteditable="true">Rate </div>  </td>
+    <td><div edit_type="click" col_name="fname" class="Rtable-cell  Rtable-cell--foot row_data" contenteditable="true"><strong>Net pay</strong></div> </td>
+
+    </tr>
+    <tr>
+      <button class="Accordion" role="tab" aria-selected="false">Albert</button>
+    <td><div class="Rtable-cell  Rtable-cell--head row_data" contenteditable="true">
+        id 56</div><td>
+    <td id ="bob" ><div edit_type="click" col_name="fname" class="Rtable-cell row_data" contenteditable="true">Francisco </div> </td>
+    <td ><div edit_type="click" col_name="fname" class="Rtable-cell row_data" contenteditable="true">day 1</div> </td>
+    <td><div edit_type="click" col_name="fname" class="Rtable-cell row_data" contenteditable="true">Day: 2</div> </td>
+    <td><div edit_type="click" col_name="fname" class="Rtable-cell row_data" contenteditable="true">Day: 3</div> </td>
+    <td><div edit_type="click" col_name="fname" class="Rtable-cell row_data" contenteditable="true">Day: 4</div> </td>
+    <td><div edit_type="click" col_name="fname" class="Rtable-cell row_data" contenteditable="true">Day: 5</div> </td>
+    <td><div edit_type="click" col_name="fname" class="Rtable-cell row_data" contenteditable="true">Day: 6</div> </td>
+    <td><div edit_type="click" col_name="fname" class="Rtable-cell row_data" contenteditable="true">Day: 7</div> </td>
+    <td><div edit_type="click" col_name="fname" class="Rtable-cell row_data" contenteditable="true">Total</div> </td>
+    <td><div edit_type="click" col_name="fname" class="Rtable-cell row_data" contenteditable="true">Rate </div>  </td>
+    <td><div edit_type="click" col_name="fname" class="Rtable-cell  Rtable-cell--foot row_data" contenteditable="true"><strong>Net pay</strong></div> </td>
+
     </tr> -->
+  <!-- </table> -->
 
-    <!-- <button class="Accordion" role="tab" aria-selected="false">Jow</button>
+
+
+
+    <button class="Accordion" role="tab" aria-selected="false">Jow</button>
+    <div class="Rtable-cell  Rtable-cell--head">
+      <h3>#27</h3></div>
+    <div class="Rtable-cell">id: 56</div>
+        <div class="Rtable-cell">id: 56</div>
+            <div class="Rtable-cell">id: 56</div>
+                <div class="Rtable-cell">id: 56</div>
+                    <div class="Rtable-cell">id: 56</div>
+                        <div class="Rtable-cell">id: 56</div>
+                            <div class="Rtable-cell">id: 56</div>
+                                <div class="Rtable-cell">id: 56</div>
+                                    <div class="Rtable-cell">id: 56</div>
+                                        <div class="Rtable-cell">id: 56</div>
+
+
+    <div class="Rtable-cell  Rtable-cell--foot"><strong>08/24: 7</strong></div>
+  </div>
+
+  <div class=" js-RtableAccordions Rtable--collapse Rtable Rtable--12cols" >
+    <button class="Accordion" role="tab" aria-selected="false">Ryan</button>
     <div class="Rtable-cell  Rtable-cell--head">
       <h3>#27</h3></div>
     <div class="Rtable-cell">id: 56</div>
@@ -103,24 +162,8 @@
 
     <div class="Rtable-cell  Rtable-cell--foot"><strong>08/24: 7</strong></div>
 
-    <button class="Accordion" role="tab" aria-selected="false">Ryan</button>
-    <div class="Rtable-cell  Rtable-cell--head">
-      <h3>#27</h3></div>
-    <div class="Rtable-cell">id: 56</div>
-        <div class="Rtable-cell">id: 56</div>
-            <div class="Rtable-cell">id: 56</div>
-                <div class="Rtable-cell">id: 56</div>
-                    <div class="Rtable-cell">id: 56</div>
-                        <div class="Rtable-cell">id: 56</div>
-                            <div class="Rtable-cell">id: 56</div>
-                                <div class="Rtable-cell">id: 56</div>
-                                    <div class="Rtable-cell">id: 56</div>
-                                        <div class="Rtable-cell">id: 56</div>
 
-    <div class="Rtable-cell  Rtable-cell--foot"><strong>08/24: 7</strong></div> -->
-
-  </div>
-
+</div>
   <button id="crewNetPay" type="button" name="button">Employee Net Pay</button>
   <div>Employees Net Pay: <span id="crewNetPayDisplay" </span></div>
   <div>Employees Current Piece Work: <span id="weekPieceWork">
