removed divs made them into tables

--- a/add.html
+++ b/add.html
@@ -86,7 +86,7 @@
 
 
 
-  <div class=" js-RtableAccordions Rtable--collapse Rtable Rtable--12cols"  id= "content-box"  >
+  <table class=" js-RtableAccordions Rtable--collapse Rtable Rtable--12cols"  id= "content-box"  >
 
     <!-- <tr>
       <button class="Accordion" role="tab" aria-selected="false">Albert</button>
@@ -127,7 +127,7 @@
 
 
 
-    <button class="Accordion" role="tab" aria-selected="false">Jow</button>
+    <!-- <button class="Accordion" role="tab" aria-selected="false">Jow</button>
     <div class="Rtable-cell  Rtable-cell--head">
       <h3>#27</h3></div>
     <div class="Rtable-cell">id: 56</div>
@@ -142,10 +142,10 @@
                                         <div class="Rtable-cell">id: 56</div>
 
 
-    <div class="Rtable-cell  Rtable-cell--foot"><strong>08/24: 7</strong></div>
-  </div>
+    <div class="Rtable-cell  Rtable-cell--foot"><strong>08/24: 7</strong></div> -->
 
-  <div class=" js-RtableAccordions Rtable--collapse Rtable Rtable--12cols" >
+
+  <!-- <div class=" js-RtableAccordions Rtable--collapse Rtable Rtable--12cols" >
     <button class="Accordion" role="tab" aria-selected="false">Ryan</button>
     <div class="Rtable-cell  Rtable-cell--head">
       <h3>#27</h3></div>
@@ -160,10 +160,10 @@
                                     <div class="Rtable-cell">id: 56</div>
                                         <div class="Rtable-cell">id: 56</div>
 
-    <div class="Rtable-cell  Rtable-cell--foot"><strong>08/24: 7</strong></div>
+    <div class="Rtable-cell  Rtable-cell--foot"><strong>08/24: 7</strong></div> -->
 
 
-</div>
+</table>
   <button id="crewNetPay" type="button" name="button">Employee Net Pay</button>
   <div>Employees Net Pay: <span id="crewNetPayDisplay" </span></div>
   <div>Employees Current Piece Work: <span id="weekPieceWork">
