sums employee total makes array object of date and time

--- a/add.html
+++ b/add.html
@@ -70,7 +70,7 @@
   <div class="form-group" id="addpiece">
     <label for="exampleInputName2">piece</label>
     <input type="text" name ="piece" id="pieceInput" class="form-control" placeholder="piece">
-    <input type="date" name = "datePiece" id= "dateInput" class="form-control">
+    <input type="Date" name = "datePiece" id= "dateInput" class="form-control">
     <button id="submitPieceWork" type="button" class="btn btn-default">ADD</button>
     <button id="newEmployee" type="button" class="btn btn-default">ADD NEW Employe</button>
   <button id="submitPieceWorkTotal" type="button" class="btn btn-default">PieceWork</button>
